BUG FIX: overflow horizontal scroll issue on landing page

--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,7 @@ body {
 
 body>* {
     position: relative;
+    overflow-x: hidden;
 }
 
 ul {
@@ -140,8 +141,8 @@ h4 {
 }
 
 h6 {
-    line-height: 1.4;
-    font-size: 4.5vw;
+    line-height: 1.25;
+    font-size: 4vw;
     font-weight: 400;
     color: #809099;
 }
@@ -181,7 +182,7 @@ article {
 }
 
 textarea {
-    padding: 0.8rem;
+    padding: 0.65rem 0.8rem;
     color: #464a4c;
     border-radius: 0.3rem;
     font-size: 1rem;
@@ -1046,8 +1047,8 @@ Contact
 }
 
 .form-contact>.form-logo {
-    width: 30vw;
-    height: 30vw;
+    width: 25vw;
+    height: 25vw;
     background-position: center;
     background-size: cover;
     margin: 0 auto;
@@ -1079,7 +1080,7 @@ textarea,
 }
 
 .form-contact .form-control {
-    padding: 0.8rem;
+    padding: 0.65rem 0.8rem;
     border-radius: 0.3rem;
     font-size: 1rem;
     background-color: #ecf0f3;
